Menu options follow a single MenuName reference. Created the Common namespace to hold constant project-wide values.

--- a/Assets/Code/Frameworks/CorePackage/ClassicEventSystem/ClassicEventSystem.asmdef
+++ b/Assets/Code/Frameworks/CorePackage/ClassicEventSystem/ClassicEventSystem.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "CorePackage.ClassicEventSystem",
     "rootNamespace": "CorePackage.ClassicEventSystem",
-    "references": [],
+    "references": [
+        "GUID:22037f3666e71a84b8c09a35d459dd04"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
