--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.9.5",
+    "com.unity.feature.2d": "1.0.0",
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.inputsystem": "1.5.1",
     "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.test-framework": "1.1.33",
