--- a/Assets/CorePackage/StateMachine/StateMachine.asmdef
+++ b/Assets/CorePackage/StateMachine/StateMachine.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "CorePackage.StateMachine",
     "rootNamespace": "CorePackage.StateMachine",
-    "references": [
-        "GUID:22037f3666e71a84b8c09a35d459dd04"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
