New Assembly Definitions for ScriptTemplates and Extensions
- Module ScriptTemplates is now exclusive to the Editor.

--- a/Assets/CorePackage/ScriptTemplates/ScriptTemplates.asmdef
+++ b/Assets/CorePackage/ScriptTemplates/ScriptTemplates.asmdef
@@ -1,10 +1,12 @@
 {
-    "name": "CorePackage.Utilities",
-    "rootNamespace": "CorePackage.Utilities",
+    "name": "CorePackage.ScriptTemplates",
+    "rootNamespace": "CorePackage.ScriptTemplates",
     "references": [
         "GUID:e615df826e3f24748925d48668b18544"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
