Code Style: Added suppressions
- DrawArrow: Suppressed due to indirect use
- EditorConfig: Suppressed as it is a simple style choice.

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ root = true
 # C# files
 [*.cs]
 
+# IDE0017 Use object initializers
+# Reason: Simple style choice.
+dotnet_diagnostic.IDE0017.severity = silent
+
 # Roslynator Analyzer supressors
 # It's a great Analyzer, but does not understand Unity very well
 
