--- a/.editorconfig
+++ b/.editorconfig
@@ -293,6 +293,7 @@ dotnet_naming_style.upper_case.required_prefix =
 dotnet_naming_style.upper_case.required_suffix = 
 dotnet_naming_style.upper_case.word_separator = _
 dotnet_naming_style.upper_case.capitalization = all_upper
+csharp_style_prefer_primary_constructors = true:suggestion
 
 [*.{cs,vb}]
 dotnet_style_coalesce_expression = true:suggestion
